# rust-lcms2

./: .gitmodules  Cargo.toml  LICENSE  README.md  rustdoc.css  search-index.js
.github/workflows/: cargo.yml
examples/: compare.rs  gamma.rs  tags.rs  thread.rs
implementors/foreign_types/: trait.ForeignType.js  trait.ForeignTypeRef.js
implementors/lcms2/: trait.CIExzYExt.js
lcms2/: CIECAM02.t.html  CIELab.t.html  CIELabExt.t.html  CIEXYZ.t.html  CacheFlag.t.html  ColorSpaceSignature.t.html  ColorSpaceSignatureExt.t.html  Intent.t.html  LCMSResult.t.html  MLU.t.html  MLURef.t.html  NamedColorInfo.t.html  NamedColorList.t.html  NamedColorListRef.t.html  ProfileClassSignature.t.html  TagSignature.t.html  ThreadContext.t.html  ToneCurve.t.html  ViewingConditions.t.html  enum.ColorSpaceSignature.html  enum.Error.html  enum.InfoType.html  enum.Intent.html  enum.PixelFormat.html  enum.ProfileClassSignature.html  enum.Tag.html  enum.TagSignature.html  fn.version.html  fn.white_point_from_temp.html  index.html  sidebar-items.js  struct.AllowCache.html  struct.CIECAM02.html  struct.CIELab.html  struct.CIEXYZ.html  struct.DisallowCache.html  struct.Flags.html  struct.Locale.html  struct.MLU.html  struct.MLURef.html  (+21 more)
lcms2/ciecam/: struct.CIECAM02.html
lcms2/context/: struct.ThreadContext.html
lcms2/error/: enum.Error.html  type.LCMSResult.html
lcms2/ext/: CIEXYZExt.t.html  CIExzYExt.t.html  trait.CIELabExt.html  trait.CIEXYZExt.html  trait.CIExzYExt.html  trait.ColorSpaceSignatureExt.html
lcms2/flags/: AllowCache.t.html  DisallowCache.t.html  struct.AllowCache.html  struct.DisallowCache.html  struct.Flags.html  trait.CacheFlag.html
lcms2/locale/: struct.Locale.html
lcms2/mlu/: struct.MLU.html  struct.MLURef.html
lcms2/namedcolorlist/: struct.NamedColorInfo.html  struct.NamedColorList.html  struct.NamedColorListRef.html
lcms2/pipeline/: PipelineRef.t.html  struct.Pipeline.html  struct.PipelineRef.html
lcms2/profile/: struct.Profile.html
lcms2/stage/: StageRef.t.html  StagesIter.t.html  struct.Stage.html  struct.StageRef.html  struct.StagesIter.html
lcms2/tonecurve/: ToneCurveRef.t.html  struct.ToneCurve.html  struct.ToneCurveRef.html
lcms2/transform/: struct.Transform.html
src/: ciecam.rs  context.rs  error.rs  eval.rs  ext.rs  flags.rs  lib.rs  locale.rs  mlu.rs  namedcolorlist.rs  pipeline.rs  profile.rs  stage.rs  tag.rs  tonecurve.rs  transform.rs
src/lcms2/: ciecam.rs.html  context.rs.html  error.rs.html  eval.rs.html  ext.rs.html  flags.rs.html  lib.rs.html  locale.rs.html  (+8 more)
tests/: gray18.icc  misc.rs  transform.rs
(+16 files in other folders)
