[package]
name = "lcms2"
version = "6.1.1"
authors = ["Kornel Lesiński <kornel@geekhood.net>"]
description = "ICC color profile handling. Rusty wrapper for Little CMS"
keywords = ["icc", "profile", "color", "lcms"]
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]
readme = "README.md"
license = "MIT"
homepage = "https://lib.rs/crates/lcms2"
documentation = "https://docs.rs/lcms2"
repository = "https://github.com/kornelski/rust-lcms2.git"
categories = ["multimedia::images", "api-bindings"]
edition = "2021"
rust-version = "1.65"

[dependencies]
bytemuck = { version = "1.20", default-features = false, features = ["min_const_generics", "align_offset"] }
foreign-types = "0.5"
lcms2-sys = { path = "./sys", version = "4.0.6" }

[features]
static = ["lcms2-sys/static"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]

[badges]
maintenance = { status = "actively-developed" }
